--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /.vscode/tools/lib/__pycache__
 /Z01_out/doxygen/xml
 /Z01_out/doxygen/yml
+/.vscode/tools/lib/doxygen_compound/__pycache__/*.pyc
+/Z01_out/doxygen/mk
+/Z01_out/doxygen/result
+/Z01_out/filelist
