--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,22 @@
 {
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/__pycache__":true
+  },
   "python.analysis.extraPaths": [
-    "${workspaceFolder}/.vscode/tools/lib"
+    "${workspaceFolder}/00_fix/lib"
   ],
   "terminal.integrated.defaultProfile.windows": "cmd",
   "terminal.integrated.profiles.windows": {
     "cmd": {
       "icon": "terminal-cmd",
       "path": [
-        "${workspaceFolder}\\.vscode\\tools\\hook\\vscode_terminal.bat"
+        "${workspaceFolder}\\00_fix\\cmd\\vscode_terminal.bat"
       ],
       "color": "terminal.ansiYellow"
     }
