--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 30_test/
 00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/apps/file_list/__pycache__/
 00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/adps/__pycache__/
+path_list.json
