notesのmdをhtmlに変換対応

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/__pycache__/
 00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/apps/__pycache__/
 00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/adps/__pycache__/
+00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/ext/__pycache__/md.cpython-311.pyc
 10_base/template/notes/mermaid.min.js
 20_user/
 50_out_tmp/
