--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,9 @@
   "C_Cpp.clang_format_fallbackStyle": "GNU",
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.autopep8"
+  },
+  "python.formatting.provider": "none"
 }
