htmlはテンプレートにフォーマッタをかけられるとこまるのでpythonに限定

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,11 +65,11 @@
   ],
   "C_Cpp_Runner.useAddressSanitizer": false,
   "C_Cpp.clang_format_fallbackStyle": "GNU",
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnType": true,
   "[python]": {
-    "editor.defaultFormatter": "ms-python.autopep8"
+    "editor.defaultFormatter": "ms-python.autopep8",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
   },
   "python.formatting.provider": "none"
 }
