--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-00_fix/lib/__pycache__/
-00_fix/lib/doxygen_compound/__pycache__/
-00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/__pycache__/
-00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/apps/__pycache__/
-00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/adps/__pycache__/
-00_fix/lib/lib_40d60c18793c4117a0e52c0fdadfd4fc/ext/__pycache__/md.cpython-311.pyc
-10_base/template/notes/mermaid.min.js
-20_user/
-50_out_tmp/
-60_out
-path_list.json
-clean.bat
-logger.log
-.vscode/c_cpp_properties.json
-u2b.bat
+*/__pycache__/
+*.pyc
